# winogender_contextuality

./: .gitignore  LICENSE  Makefile  README.md  collect_batches.sh  collect_null.sh  collect_null_gemma.sh  occupation_english_means_final.csv  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 00-sk-testing-client.ipynb  01-sk-testing-tokenizer.ipynb  03-sk-local-testing.ipynb  04-sk-assorted-tests.ipynb  05-sk-pipeline-development.ipynb  06-sk-data-exploration.ipynb  07-sk-sheaf-simultaneous.ipynb  08-sk-results-analysis.ipynb  09-sk-one-pnoun-calculations.ipynb  10-sk-bias-tests.ipynb  11-sk-winopron.ipynb  12-sk-metaprompting.ipynb  13-sk-paper-figures.ipynb  14-sk-gemma-testing.ipynb  all_wino_occupations.csv  qwen_measurement_df.csv  test_regression_df.csv  test_summary.csv
notebooks/testing-notebooks/: 00-sk-testing-client.ipynb  01-sk-testing-tokenizer.ipynb  03-sk-local-testing.ipynb  04-sk-assorted-tests.ipynb  08-sk-results-analysis.ipynb  11-sk-winopron.ipynb
reports/PDFs/: Context_Pres.pptx
tests/: test_data.py
winogender_contextuality/: __init__.py  config.py  dataset.py  features.py  measure_contextuality.py  plots.py  utils.py
winogender_contextuality/modeling/: ModelProbs.py  analysis.py  collect_sequential.py  contextuality.py  meta_prompting.py  params.yaml  pipeline.py  pipeline_bool.py  predict.py  prompting.py  run_api.py  run_local.py  train.py
