[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "winogender_contextuality"
version = "0.0.1"
description = "Assessing contextuality in generative language models' resolution of gendered pronouns."
authors = [
  { name = "Sagar Kumar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["winogender_contextuality"]
include = ["pyproject.toml", "winogender_contextuality/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["winogender_contextuality"]
force-sort-within-sections = true

